--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,11 +114,11 @@ jobs:
           # To run the CI with debug information, add --info
           ./gradlew check --parallel --build-cache
 
-      # Create shell executable for the firebase emulator
+      # Create shell script for connected tests
       - name: Create shell file
         run: echo './gradlew connectedCheck --build-cache' > run_tests.sh
 
-      # Grant execute permission for shell script
+      # Grant execute permissions for shell script
       - name: Grant execute permission for shell script
         run: |
           chmod +x ./run_tests.sh
@@ -135,17 +135,17 @@ jobs:
           disable-animations: true
           script: firebase emulators:exec ./run_tests.sh
 
-      # Create shell executable for the firebase emulator
+      # Create shell script for Node tests
       - name: Create shell file
-        run: echo 'npm run test' > run_rules_tests.sh
+        run: echo 'npm run test' > run_node_tests.sh
 
-      # Grant execute permission for the shell file
+      # Grant execute permissions for the shell file
       - name: Grant execute permission for the shell file
-        run: chmod +x run_rules_tests.sh
+        run: chmod +x run_node_tests.sh
 
-      # Run JavaScript Firebase rules test
-      - name: Run Firebase rules test
-        run: firebase emulators:exec --only firestore,storage ./run_rules_tests.sh
+      # Run
+      - name: Run Node tests with Firestore and Storage emulators
+        run: firebase emulators:exec --only firestore,storage ./run_nodes_tests.sh
 
       # This step generates the coverage report which will be uploaded to sonar
       - name: Generate Coverage Report
