--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,8 +128,8 @@ jobs:
           ./gradlew check --parallel --build-cache
 
       # Create shell script for connected tests
-      - name: Create shell file
-        run: echo './gradlew connectedCheck --build-cache' > run_tests.sh
+#      - name: Create shell file
+#        run: echo './gradlew connectedCheck --build-cache' > run_tests.sh
 
       # Grant execute permissions for shell script
       - name: Grant execute permission for shell script
@@ -139,6 +139,9 @@ jobs:
       # Run connected tests on the emulator
       - name: Run connected tests
         uses: reactivecircus/android-emulator-runner@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           api-level: 34
           target: google_apis
@@ -149,13 +152,13 @@ jobs:
           script: firebase emulators:exec ./run_tests.sh
 
       # This step generates the coverage report which will be uploaded to sonar
-      - name: Generate Coverage Report
-        run: |
-          ./gradlew jacocoTestReport
+#      - name: Generate Coverage Report
+#        run: |
+#          ./gradlew jacocoTestReport
 
       # Upload the various reports to sonar
-      - name: Upload report to SonarCloud
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar --parallel --build-cache
+#      - name: Upload report to SonarCloud
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#        run: ./gradlew sonar --parallel --build-cache
