--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ on:
   push:
     branches:
       - main
-#      - branch-fixcoverage
 
   pull_request:
     types:
@@ -85,18 +84,9 @@ jobs:
           echo "$GOOGLE_SERVICES" | base64 --decode > ./app/google-services.json
           echo "$LOCAL_PROPERTIES" | base64 --decode > ./local.properties
 
-      # Grant execute permission for gradlew
       - name: Grant execute permission for gradlew
         run: |
           chmod +x ./gradlew
-
-      # Install the firebase emulator suite
-      - name: Install Firebase Emulator Suite
-        run: npm install -g firebase-tools
-
-      # Install dependencies for the firebase emulator suite
-      - name: Install dependencies for the firebase emulator suite
-        run: npm install
 
       # Check formatting
       - name: KTFmt Check
@@ -127,21 +117,9 @@ jobs:
           # To run the CI with debug information, add --info
           ./gradlew check --parallel --build-cache
 
-      # Create shell script for connected tests
-#      - name: Create shell file
-#        run: echo './gradlew connectedCheck --build-cache' > run_tests.sh
-
-      # Grant execute permissions for shell script
-#      - name: Grant execute permission for shell script
-#        run: |
-#          chmod +x ./run_tests.sh
-
       # Run connected tests on the emulator
       - name: Run connected tests
         uses: reactivecircus/android-emulator-runner@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           api-level: 34
           target: google_apis
@@ -149,8 +127,7 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew connectedCheck --build-cache
-#          script: firebase emulators:exec ./run_tests.sh
+          script: ./gradlew connectedCheck --parallel --build-cache
 
       # This step generates the coverage report which will be uploaded to sonar
       - name: Generate Coverage Report
