--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,6 +160,13 @@ jobs:
         run: |
           ./gradlew jacocoTestReport
 
+      # Upload the coverage report to the artifacts
+      - name: Upload Jacoco Test Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-test-report
+          path: build/reports/jacoco/test/jacocoTestReport.xml
+
       # Upload the various reports to sonar
       - name: Upload report to SonarCloud
         env:
