--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,15 +141,18 @@ jobs:
         run: |
           ./gradlew jacocoTestReport
 
-      - name: List Jacoco Execution Data Files
-        run: ls -R build/outputs/code_coverage
-
       # Upload the coverage report to the artifacts
       - name: Upload Jacoco Test Report
         uses: actions/upload-artifact@v4
         with:
           name: jacoco-test-report
           path: build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
+
+      - name: List Jacoco Execution Data Files
+        run: ls -R build/outputs/
+
+      - name: List Jacoco Execution Data Files
+        run: ls -R build/reports/
 
       # Upload the various reports to sonar
       - name: Upload report to SonarCloud
