--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,8 +139,8 @@ jobs:
       - name: Upload Jacoco Test Report
         uses: actions/upload-artifact@v4
         with:
-          name: jacoco-test-report
-          path: build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
+          name: jacocoTestReport
+          path: reports/jacoco/
 
 
       # Upload the various reports to sonar
