--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -101,6 +101,7 @@ volley = "1.2.1"
 composeMaterial = "1.4.0"
 core = "1.46.0"
 playServicesLocation = "21.3.0"
+firebaseMessagingKtx = "24.1.0"
 
 
 [libraries]
@@ -124,6 +125,7 @@ compose-activity = { group = "androidx.activity", name = "activity-compose", ver
 compose-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "composeViewModel" }
 compose-test-junit = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 compose-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-auth-v2200 = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuthVersion" }
 firebase-firestore-v2440 = { module = "com.google.firebase:firebase-firestore", version.ref = "firebaseFirestoreVersion" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
@@ -202,6 +204,7 @@ volley = { group = "com.android.volley", name = "volley", version.ref = "volley"
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
 core = { group = "com.google.ar", name = "core", version.ref = "core" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+firebase-messaging-ktx = { group = "com.google.firebase", name = "firebase-messaging-ktx", version.ref = "firebaseMessagingKtx" }
 
 
 
