--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,12 @@ jobs:
         run: |
           ./gradlew ktfmtCheck
 
+      # Create .env file to hold secret credentials
+      - name: Create functions/.env.unio-1b8ee file
+        run: |
+          echo "EMAIL=${{ secrets.FUNCTIONS_COMPANY_EMAIL }}" > functions/.env.unio-1b8ee
+          echo "PASSWORD=${{ secrets.FUNCTIONS_COMPANY_PASSWORD }}" >> functions/.env.unio-1b8ee
+
       # Run
       - name: Run Node tests with Firestore and Storage emulators
         run: firebase emulators:exec --only firestore,storage 'npm run test'
@@ -136,6 +142,10 @@ jobs:
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
           script: firebase emulators:exec --import=firebase/emulator-data './gradlew connectedCheck --parallel --build-cache'
+
+      # Delete the custom .env file to avoid leaving sensitive data
+      - name: Delete .env.unio-1b8ee file
+        run: rm -f functions/.env.unio-1b8ee
 
       # This step generates the coverage report which will be uploaded to sonar
       - name: Generate Coverage Report
