--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@firebase/rules-unit-testing": "^4.0.0"
+    "@firebase/rules-unit-testing": "^4.0.0",
+    "punycode": "^2.3.1"
   },
   "devDependencies": {
     "jest": "^29.7.0"
