--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -61,6 +61,8 @@ mapsComposeUtils = "4.3.0"
 okhttp = "4.12.0"
 okhttpLoggingInterceptor = "4.12.0"
 retrofit = "2.11.0"
+retrofitMock = "2.11.0"
+mockwebserver = "4.12.0"
 
 # Testing Unit
 junit = "4.13.2"
@@ -209,6 +211,8 @@ firebase-functions-ktx = { group = "com.google.firebase", name = "firebase-funct
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-gson-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+retrofit-mock = { module = "com.squareup.retrofit2:retrofit-mock", version.ref = "retrofitMock" }
+mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "mockwebserver" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
