--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "@firebase/rules-unit-testing": "^4.0.0",
+    "nodemailer": "^6.9.16",
     "punycode": "^2.3.1"
   },
   "devDependencies": {
